# horfan-sam

./: CMakeLists.txt  custom_ops.cpp  custom_ops.h  hello.cpp  hello.h  main.cpp  main.out  makefile
backend/: package-lock.json
